Update and rename index part to index.html

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
  <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Hugo's Digital Restaurant Menu</title>
+   <title>Malite's Digital Restaurant Menu</title>
    <link rel="stylesheet" href="style.css">
  </head>
  <body>
    <header>
-     <h1>Welcome to Hugo's Restaurant</h1>
+     <h1>Welcome to Malite's Restaurant</h1>
      <nav>
        <ul>
          <li><a href="#appetizers">Appetizers</a></li>
@@ -97,7 +97,7 @@
        </section>
    </main>
    <footer>
-     <p>&copy; 2025 Hugo's Digital Restaurant Menu, we welcome you to visit us any time!</p>
+     <p>&copy; 2025 Malites's Digital Restaurant Menu, we welcome you to visit us any time!</p>
    </footer>
    <script src="script.js"></script>
  </body>
