--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
      <section id="appetizers">
        <h2>Appetizers</h2>
        <div class="dish">
-         <img src="images/Badjias.jpeg" alt="Badjias">
+         <img src="images/bajias.png" alt="Badjias">
        <p>Badjias - 4.99MZN</p>
        <button class="add-to-cart" data-price="4.99" data-name="Badjias">Add to Cart</button>
      </div>
  <div class="dish">
-     <img src="images/pao de alho.jpeg" alt="Pao de alho">
+     <img src="images/pao de alho.png" alt="Pao de alho">
        <p>Pao de alho - 9.99MZN</p>
        <button class="add-to-cart" data-price="9.99" data-name="Pao de alho">Add to Cart</button>
      </div>
@@ -43,27 +43,27 @@
      <section id="mains">
        <h2>Main Courses</h2>
        <div class="dish">
-         <img src="images/Frango.jpeg" alt="Frango"> 
+         <img src="images/frango.png" alt="Frango"> 
        <p>Frango Grelhado - 249.99MZN</p>
        <button class="add-to-cart" data-price="249.99" data-name="Frango">Add to Cart</button>
      </div>
  <div class="dish">
-     <img src="images/Batata Frita.jpeg" alt="Batata Frita">
+     <img src="images/Batatas Fritas.png" alt="Batatas Fritas">
        <p>Batata Frita - 100MZN</p>
        <button class="add-to-cart" data-price="100" data-name="Batata">Add to Cart</button>
      </div>
      <div class="dish">
-       <img src="images/carne-borrego.jpg" alt="carne-borrego.jpg">
+       <img src="images/Frango Borrego.png" alt="carne-borrego.jpg">
        <p>carne-borrego - 599.99MZN</p>
        <button class="add-to-cart" data-price="599.99" data-name="Carne Borrego">Add to Cart</button>
      </div>
      <div class="dish">
-       <img src="images/Salada-de-Maionese.jpg" alt="Salada-de-Maionese">
+       <img src="images/Salada-de -Maionese.png" alt="Salada-de-Maionese">
        <p>Salada de Maionese (Vegetarian) - 79.99MZN</p>
        <button class="add-to-cart" data-price="79.99" data-name="salada de maionese">Add to Cart</button>
      </div>
      <div class="dish">
-       <img src="images/Salada-de-Alface-Pepino-e-Tomate.jpg" alt="Salada-de-Alface-Pepino-e-Tomate">
+       <img src="images/salada  de tomate .png" alt="Salada-de-Alface-Pepino-e-Tomate">
        <p>Salada de Alface,Pepino e Tomate (Vegetarian) - 49.99MZN</p>
        <button class="add-to-cart" data-price="49.99" data-name="salada de Alface">Add to Cart</button>
      </div>
@@ -71,12 +71,12 @@
      <section id="desserts">
        <h2>Desserts</h2>
      <div class="dish">
-         <img src="images/Bolo d Choc.jpeg" alt="Bolo d Choc">
+         <img src="images/bolo molhado.png" alt="Bolo d Choc">
        <p>Bolo de Chocolate - 49.99MZN</p>
        <button class="add-to-cart" data-price="49.99" data-name="Bolo de chocolate">Add to Cart</button>
      </div>
        <div class="dish">
-       <img src="images/Palmier.jpeg" alt="Palmier"> 
+       <img src="images/palmear.png" alt="Palmier"> 
        <p>Palmier - 79.99MZN</p>
        <button class="add-to-cart" data-price="79.99" data-name="Palmier">Add to Cart</button>
        </div>
@@ -84,12 +84,12 @@
      <section id="drinks">
          <h2>Drinks</h2>
          <div class="dish">
-             <img src="images/2M.jpeg" alt="2M"> 
+             <img src="images/2M.png" alt="2M"> 
          <p>2M - 59.99MZN</p>
          <button class="add-to-cart" data-price="59.99" data-name="2M">Add to Cart</button>
      </div>
      <div class="dish">
-         <img src="images/coke.jpeg" alt="coke">
+         <img src="images/coca.png" alt="coke">
          <p>Coca cola - 69.99MZN</p>
          <button class="add-to-cart" data-price="69.99" data-name="coke">Add to Cart</button>
      </div>
