--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="header-content">
-            <h1>Malite's Restaurant</h1>
+            <h1>lindyla takeaway</h1>
             <p class="tagline">Authentic Mozambican Cuisine</p>
         </div>
         <nav>
