--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <div class="contact-info">
                 <h3>Visit Us</h3>
                 <p>123 Food Street, Maputo, Mozambique</p>
-                <p><i class="fas fa-phone"></i> +258 84 123 4567</p>
+                <p><i class="fas fa-phone"></i> +258 84 1639746</p>
             </div>
             <div class="hours">
                 <h3>Opening Hours</h3>
