--- a/index.html
+++ b/index.html
@@ -57,9 +57,19 @@
             </div>
         </section>
 
-        <!-- Other menu sections (mains, desserts, drinks) follow same pattern -->
+        <!--Mains Section -->
+        <section id="Desserts" class="menu-section">
+            <h2><i class="fas fa-utensils"></i> Dsserts</h2>
+            <div class="menu-grid">
+                <div class="dish-card">
+                    <div class="dish-image" style="background-image: url('images/bolo molhado.png')"></div>
+                    <div class="dish-info">
+                        <h3>bolo molhado.png</h3>
+                        <p>Crispy Mozambican vegetable fritters</p>
+                        <div class="dish-footer">
+                            <span class="price">45 MZN</span>
+                            <button class="add-to-cart" data-price="45 MZN" data-name="bolo molhado.png">Add to Cart</button>
     </main>
-
     <!-- Checkout Modal -->
     <div id="checkout-modal" class="modal">
         <div class="modal-content">
