--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
         <!--Mains Section -->
         <section id="Desserts" class="menu-section">
-            <h2><i class="fas fa-utensils"></i> Dsserts</h2>
+            <h2><i class="fas fa-utensils"></i> Desserts</h2>
             <div class="menu-grid">
                 <div class="dish-card">
                     <div class="dish-image" style="background-image: url('images/bolo molhado.png')"></div>
