--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </div>
         </section>
 
-        <!--Mains Section -->
+    </main>
         <section id="Desserts" class="menu-section">
             <h2><i class="fas fa-utensils"></i> Desserts</h2>
             <div class="menu-grid">
@@ -69,7 +69,30 @@
                         <div class="dish-footer">
                             <span class="price">45 MZN</span>
                             <button class="add-to-cart" data-price="45 MZN" data-name="bolo molhado.png">Add to Cart</button>
+                            </div>
+                    </div>
+                </div>
+                <!-- Other dishes follow same structure -->
+            </div>
+        </section>
     </main>
+      <section id="Drinks" class="menu-section">
+            <h2><i class="fas fa-utensils"></i> Drinks</h2>
+            <div class="menu-grid">
+                <div class="dish-card">
+                    <div class="dish-image" style="background-image: url('coca.png')"></div>
+                    <div class="dish-info">
+                        <h3>coca.png</h3>
+                        <p>coca-cola</p>
+                        <div class="dish-footer">
+                            <span class="price">25 MZN</span>
+                            <button class="add-to-cart" data-price="25 MZN" data-name="coca.png">Add to Cart</button>
+                            </div>
+                    </div>
+                </div>
+                <!-- Other dishes follow same structure -->
+            </div>
+        </section>
     <!-- Checkout Modal -->
     <div id="checkout-modal" class="modal">
         <div class="modal-content">
