--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Malite's Digital Menu</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Digital Menu</title>
+  <link rel="stylesheet" href="style.css"/>
+  <script defer src="script.js"></script>
 </head>
 <body>
 
@@ -14,56 +14,56 @@
     <p class="tagline">Authentic Mozambican Cuisine</p>
   </header>
 
-  <section class="menu-section">
-    <h2><i class="fas fa-utensils"></i> Appetizers</h2>
-    <div class="menu-grid">
-      <div class="dish-card">
-        <div class="dish-image" style="background-image: url('images/bajias.png');"></div>
-        <div class="dish-info">
+  <main>
+    <section class="menu-section" id="appetizers">
+      <h2>Appetizers</h2>
+      <div class="menu-grid">
+        <div class="dish-card" data-name="Badjias" data-price="4.99">
+          <img src="images/bajias.png" alt="Badjias">
           <h3>Badjias</h3>
           <p>Crispy Mozambican vegetable fritters</p>
           <div class="dish-footer">
             <span class="price">4.99 MZN</span>
-            <button>Add to Cart</button>
+            <button class="add-btn">Add</button>
           </div>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
 
-  <section class="menu-section">
-    <h2><i class="fas fa-ice-cream"></i> Desserts</h2>
-    <div class="menu-grid">
-      <div class="dish-card">
-        <div class="dish-image" style="background-image: url('images/bolo.png');"></div>
-        <div class="dish-info">
+    <section class="menu-section" id="drinks">
+      <h2>Drinks</h2>
+      <div class="menu-grid">
+        <div class="dish-card" data-name="Coca-Cola" data-price="25">
+          <img src="images/coca.png" alt="Coca-Cola">
+          <h3>Coca-Cola</h3>
+          <p>Chilled soft drink</p>
+          <div class="dish-footer">
+            <span class="price">25 MZN</span>
+            <button class="add-btn">Add</button>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="menu-section" id="desserts">
+      <h2>Desserts</h2>
+      <div class="menu-grid">
+        <div class="dish-card" data-name="Bolo Molhado" data-price="45">
+          <img src="images/bolo.png" alt="Bolo Molhado">
           <h3>Bolo Molhado</h3>
           <p>Moist chocolate cake</p>
           <div class="dish-footer">
             <span class="price">45 MZN</span>
-            <button>Add to Cart</button>
+            <button class="add-btn">Add</button>
           </div>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
+  </main>
 
-  <section class="menu-section">
-    <h2><i class="fas fa-glass-whiskey"></i> Drinks</h2>
-    <div class="menu-grid">
-      <div class="dish-card">
-        <div class="dish-image" style="background-image: url('images/coca.png');"></div>
-        <div class="dish-info">
-          <h3>Coca-Cola</h3>
-          <p>Refreshing soft drink</p>
-          <div class="dish-footer">
-            <span class="price">25 MZN</span>
-            <button>Add to Cart</button>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
+  <footer>
+    <h3>Cart Total: <span id="total">0.00</span> MZN</h3>
+  </footer>
 
 </body>
 </html>
