--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 </head>
 <body>
 
-  <header>
+ <header>
+  <div class="logo-container">
+    <img src="path_to_your_logo.png" alt="Lindyla Take Away Logo" class="logo">
+  </div>
+</header>
+
     <h1>Lindyla Takeaway</h1>
     <p class="tagline">Authentic Mozambican Cuisine</p>
   </header>
