--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
  <header>
   <div class="logo-container">
-    <img src="lindyla_take_away_logo.png" alt="Lindyla Take Away Logo" class="logo">
+    <img src="pach_to_your_logo.png" alt="Lindyla Take Away Logo" class="logo">
   </div>
 </header>
 
