--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 
  <header>
   <div class="logo-container">
-    <img src="image/lindyla take away logo.png" alt="Lindyla Take Away Logo" class="logo">
+    <img src="image/lindyla-logo.png" alt="Lindyla Take Away Logo" class="logo">
   </div>
 </header>
+
 
     <h1>Lindyla Takeaway</h1>
     <p class="tagline">Authentic Mozambican Cuisine</p>
