--- a/index.html
+++ b/index.html
@@ -206,7 +206,27 @@
         </div>
       </div>
     </section>
-  </main>
+  <section class="menu-section">
+  <h2><i class="fa fa-credit-card"></i> Payment Methods</h2>
+  <div class="menu-grid" style="justify-content: center;">
+    <div class="dish-card" style="max-width: 320px; text-align: center;">
+      <div style="padding: 2rem;">
+        <p style="margin-bottom: 1rem;">Choose your preferred payment method:</p>
+        <a href="card-payment.html" target="_blank"><button class="add-to-cart" style="margin-bottom: 0.8rem; width: 100%;">
+          <i class="fa fa-cc-visa"></i> Pay with Visa
+        </button></a>
+        <button class="add-to-cart" style="margin-bottom: 0.8rem; width: 100%;">
+          <i class="fa fa-mobile"></i> Pay with M-Pesa
+        </button>
+        <button class="add-to-cart" style="width: 100%;">
+          <i class="fa fa-money-bill-wave"></i> Pay with e-Mola
+        </button>
+      </div>
+    </div>
+  </div>
+</section>
+
+$1
 
   <footer>
     <div class="footer-content">
@@ -235,3 +255,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
