--- a/index.html
+++ b/index.html
@@ -7,16 +7,11 @@
   <link rel="stylesheet" href="all.min.css">
   <link rel="stylesheet" href="style.css">
   <style>
-    body {
-      background: linear-gradient(135deg, #ffe5ec, #ffc2d1);
-      font-family: 'Poppins', sans-serif;
-      color: #4a4a4a;
-    }
-
+    /* QR Intro Screen */
     #qr-screen {
       position: fixed;
       inset: 0;
-      background: #fff0f5;
+      background: #fff;
       z-index: 9999;
       display: flex;
       flex-direction: column;
@@ -34,123 +29,27 @@
     }
 
     #qr-screen img {
-      max-width: 280px;
+      max-width: 300px;
       margin-bottom: 20px;
-      border-radius: 12px;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.1);
     }
 
     #qr-screen button {
-      background: #ff4f81;
+      background-color: #e60000;
       color: #fff;
       border: none;
-      padding: 12px 28px;
-      border-radius: 30px;
+      padding: 12px 24px;
       font-size: 16px;
-      font-weight: 600;
+      border-radius: 8px;
       cursor: pointer;
-      transition: all 0.3s ease;
-    }
-
-    #qr-screen button:hover {
-      background: #ff3366;
-      transform: scale(1.05);
-    }
-
-    header {
-      background: linear-gradient(to right, #ff4f81, #ff6f91);
-      color: white;
-      text-align: center;
-      padding: 2rem 1rem;
-      border-bottom-left-radius: 50px;
-      border-bottom-right-radius: 50px;
     }
 
     header .header-content img {
-      max-height: 90px;
+      max-height: 80px;
       margin-bottom: 10px;
     }
 
-    h1, .tagline {
-      color: white;
-    }
-
-    .nav-links a {
-      background: rgba(255,255,255,0.2);
-      color: white;
-      padding: 8px 16px;
-      border-radius: 20px;
-      transition: background 0.3s;
-    }
-
-    .nav-links a:hover {
-      background: rgba(255,255,255,0.4);
-    }
-
-    .menu-section h2 {
-      text-align: center;
-      color: #ff4f81;
-      margin-top: 3rem;
-    }
-
-    .dish-card {
-      background: white;
-      border-radius: 20px;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.08);
-      overflow: hidden;
-      transition: transform 0.3s;
-    }
-
-    .dish-card:hover {
-      transform: translateY(-5px);
-    }
-
-    .dish-info h3 {
-      color: #ff4f81;
-      font-size: 1.3rem;
-    }
-
-    .dish-info p {
-      font-size: 0.95rem;
-    }
-
-    .price {
-      color: #ff4f81;
-      font-weight: bold;
-    }
-
-    .add-to-cart {
-      background: #ff6f91;
-      color: white;
-      border: none;
-      padding: 8px 16px;
-      border-radius: 20px;
-      font-size: 0.9rem;
-      cursor: pointer;
-    }
-
-    .add-to-cart:hover {
-      background: #ff4f81;
-    }
-
-    footer {
-      background: #ff4f81;
-      color: white;
-      padding: 3rem 1rem 1rem;
-      margin-top: 3rem;
-      border-top-left-radius: 40px;
-      border-top-right-radius: 40px;
-    }
-
-    .footer-content h3 {
-      color: white;
-    }
-
-    .copyright {
-      text-align: center;
-      margin-top: 2rem;
-      font-size: 0.9rem;
-      opacity: 0.85;
+    .header-content h1, .tagline {
+      display: none;
     }
   </style>
 </head>
@@ -158,15 +57,13 @@
   <!-- QR INTRO SCREEN -->
   <div id="qr-screen">
     <img src="qr.png" alt="Scan QR to view menu">
-    <p>Please scan the QR code to view our sweet menu ✨</p>
-    <button onclick="hideQRScreen()">Enter Menu</button>
+    <p>Please scan the QR code to view the menu.</p>
+    <button onclick="hideQRScreen()">Continue to Website</button>
   </div>
 
   <header>
     <div class="header-content">
       <img src="logo.png" alt="Lindyla Logo">
-      <h1>Lindyla Take Away</h1>
-      <p class="tagline">Delicious meals at your fingertips</p>
       <nav>
         <ul class="nav-links">
           <li><a href="#"><i class="fa fa-home"></i> Home</a></li>
@@ -194,7 +91,7 @@
       <h2><i class="fa fa-fire"></i> Popular Dishes</h2>
       <div class="menu-grid">
         <div class="dish-card">
-          <div class="dish-image" style="background-image: url('images/dish1.jpg'); height: 200px; background-size: cover; background-position: center;"></div>
+          <div class="dish-image" style="background-image: url('images/dish1.jpg');"></div>
           <div class="dish-info">
             <h3>Chicken Peri-Peri</h3>
             <p>Grilled chicken with our secret spicy sauce.</p>
@@ -206,27 +103,7 @@
         </div>
       </div>
     </section>
-  <section class="menu-section">
-  <h2><i class="fa fa-credit-card"></i> Payment Methods</h2>
-  <div class="menu-grid" style="justify-content: center;">
-    <div class="dish-card" style="max-width: 320px; text-align: center;">
-      <div style="padding: 2rem;">
-        <p style="margin-bottom: 1rem;">Choose your preferred payment method:</p>
-        <a href="card-payment.html" target="_blank"><button class="add-to-cart" style="margin-bottom: 0.8rem; width: 100%;">
-          <i class="fa fa-cc-visa"></i> Pay with Visa
-        </button></a>
-        <button class="add-to-cart" style="margin-bottom: 0.8rem; width: 100%;">
-          <i class="fa fa-mobile"></i> Pay with M-Pesa
-        </button>
-        <button class="add-to-cart" style="width: 100%;">
-          <i class="fa fa-money-bill-wave"></i> Pay with e-Mola
-        </button>
-      </div>
-    </div>
-  </div>
-</section>
-
-$1
+  </main>
 
   <footer>
     <div class="footer-content">
@@ -246,6 +123,17 @@ $1
   </footer>
 
   <script>
+    function hideQRScreen() {
+      const qr = document.getElementById('qr-screen');
+      qr.classList.add('fade-out');
+      setTimeout(() => qr.style.display = 'none', 1000);
+    }
+  </script>
+  
+  <script src="script.js"></script>
+</body>
+</html>
+<script>
   document.addEventListener("DOMContentLoaded", function () {
     let cartCount = 0;
     let cartTotal = 0;
@@ -266,14 +154,4 @@ $1
     });
   });
 </script>
-
-    function hideQRScreen() {
-      const qr = document.getElementById('qr-screen');
-      qr.classList.add('fade-out');
-      setTimeout(() => qr.style.display = 'none', 1000);
-    }
-  </script>
-  <script src="script.js"></script>
-</body>
-</html>
 
