--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
       <h2>Popular Dishes</h2>
       <div class="menu-grid">
         <div class="dish-card">
-          <div class="dish-image" style="background-image: url('images/dish1.jpg');"></div>
+          <div class="dish-image" style="background-image: url('images/frango.png');"></div>
           <div class="dish-info">
             <h3>Chicken Peri-Peri</h3>
             <p>Grilled chicken with secret spicy sauce.</p>
