--- a/index.html
+++ b/index.html
@@ -201,9 +201,9 @@
     </section>
 
     <section class="payment-options">
-      <button onclick="pagar('Visa')"><i class="fab fa-cc-visa"></i> Visa</button>
-      <button onclick="pagar('M-Pesa')"><i class="fas fa-mobile-alt"></i> M-Pesa</button>
-      <button onclick="pagar('eMola')"><i class="fas fa-wallet"></i> eMola</button>
+      <button onclick="mostrarPagamento('Visa')"><i class="fab fa-cc-visa"></i> Visa</button>
+      <button onclick="mostrarPagamento('M-Pesa')"><i class="fas fa-mobile-alt"></i> M-Pesa</button>
+      <button onclick="mostrarPagamento('eMola')"><i class="fas fa-wallet"></i> eMola</button>
     </section>
 
     <div id="payment-method"></div>
@@ -213,11 +213,30 @@
   </footer>
   <audio id="click-sound" src="https://cdn.pixabay.com/audio/2022/03/15/audio_4353c1e4e0.mp3"></audio>
   <script>
-    const pratos = Array.from({ length: 22 }, (_, i) => ({
-      nome: `Prato ${i + 1}`,
-      preco: 200 + i * 25,
-      img: `images/prato${(i % 6) + 1}.png`
-    }));
+    const pratos = [
+      { nome: "Frango Grelhado", preco: 500, img: "images/prato1.png" },
+      { nome: "Pizza Marguerita", preco: 600, img: "images/prato2.png" },
+      { nome: "Cheeseburger", preco: 450, img: "images/prato3.png" },
+      { nome: "Lasanha de Carne", preco: 550, img: "images/prato4.png" },
+      { nome: "Espaguete ao Alho", preco: 400, img: "images/prato5.png" },
+      { nome: "Arroz à Grega", preco: 350, img: "images/prato6.png" },
+      { nome: "Camarão Frito", preco: 750, img: "images/prato1.png" },
+      { nome: "Cachorro-Quente", preco: 300, img: "images/prato2.png" },
+      { nome: "Tosta Mista", preco: 250, img: "images/prato3.png" },
+      { nome: "Bife Acebolado", preco: 550, img: "images/prato4.png" },
+      { nome: "Kebab de Frango", preco: 500, img: "images/prato5.png" },
+      { nome: "Feijoada", preco: 600, img: "images/prato6.png" },
+      { nome: "Moamba de Galinha", preco: 650, img: "images/prato1.png" },
+      { nome: "Chamuças", preco: 200, img: "images/prato2.png" },
+      { nome: "Matapa", preco: 400, img: "images/prato3.png" },
+      { nome: "Pudim de Leite", preco: 300, img: "images/prato4.png" },
+      { nome: "Gelado de Baunilha", preco: 280, img: "images/prato5.png" },
+      { nome: "Mousse de Chocolate", preco: 320, img: "images/prato6.png" },
+      { nome: "Frango à Cafreal", preco: 620, img: "images/prato1.png" },
+      { nome: "Pão com Chouriço", preco: 240, img: "images/prato2.png" },
+      { nome: "Batatas Fritas", preco: 200, img: "images/prato3.png" },
+      { nome: "Coxinhas", preco: 250, img: "images/prato4.png" }
+    ];
 
     let contador = 0;
     let total = 0;
@@ -225,8 +244,8 @@
     const menu = document.getElementById('menu');
     const elContador = document.getElementById("cart-count");
     const elTotal = document.getElementById("cart-total");
-    const pagamento = document.getElementById("payment-method");
     const som = document.getElementById("click-sound");
+    const pagamento = document.getElementById("payment-method");
 
     pratos.forEach(p => {
       const card = document.createElement('div');
@@ -235,7 +254,7 @@
         <div class="dish-image" style="background-image: url('${p.img}')"></div>
         <div class="dish-info">
           <h3>${p.nome}</h3>
-          <p>Delicioso e fresquinho!</p>
+          <p>Uma delícia de sabor único!</p>
           <div class="dish-footer">
             <span>MZN ${p.preco}</span>
             <button class="add-to-cart" onclick="adicionar(${p.preco})"><i class='fas fa-plus'></i> Adicionar</button>
@@ -253,34 +272,15 @@
       som.play();
     }
 
-    function pagar(metodo) {
+    function mostrarPagamento(metodo) {
       pagamento.style.display = "block";
       pagamento.innerHTML = `
         <h3>Pagamento com ${metodo}</h3>
         <p>Total: <strong>MZN ${total.toFixed(2)}</strong></p>
-        <label>Número ${metodo === 'Visa' ? 'do cartão' : 'de telemóvel'}:</label>
-        <input type="text" id="ref-input" placeholder="${metodo === 'Visa' ? 'XXXX-XXXX-XXXX-XXXX' : '84XXXXXXX'}" style="width:100%; margin:10px 0"><br>
-        <button onclick="mostrarConfirmacao('${metodo}')">Continuar</button>
-        <button onclick="voltarPagamento()" style="margin-left: 10px">Voltar</button>
-      `;
-    }
-
-    function voltarPagamento() {
-      pagamento.style.display = "none";
-    }
-
-    function mostrarConfirmacao(metodo) {
-      const ref = document.getElementById("ref-input").value;
-      if (!ref) {
-        alert("Por favor, preencha o número corretamente.");
-        return;
-      }
-      pagamento.innerHTML = `
-        <h3>Confirmar Pagamento</h3>
-        <p>Você está prestes a pagar <strong>MZN ${total.toFixed(2)}</strong> com ${metodo}.</p>
-        <p>Número informado: ${ref}</p>
-        <button onclick="confirmarPagamento('${metodo}')">Confirmar Agora</button>
-        <button onclick="voltarPagamento()" style="margin-left: 10px">Cancelar</button>
+        <label>Digite seu número (${metodo}):</label><br>
+        <input type="text" placeholder="Número..." style="width:100%; margin: 10px 0;"><br>
+        <button onclick="confirmarPagamento('${metodo}')">Confirmar</button>
+        <button onclick="pagamento.style.display='none'" style="margin-left:10px">Cancelar</button>
       `;
     }
 
@@ -299,3 +299,5 @@
   </script>
 </body>
 </html>
+
+  
